[package]
name = "z0rdl"
version = "0.1.0"
edition = "2021"
authors = ["unknowntrojan"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
tl = { version = "*", features = ["simd"] }
reqwest = "*"
futures = "*"